Read a jarfile's module manifest entries through the VFS API
VfsRoot already reported the Automatic-Module-Name manifest entry, but
not the Add-Exports and Add-Opens entries that JEP 261 defines alongside
it, so Scanner reached into ClasspathElementZip's LogicalZipFile field to
read them. Add the two missing accessors, and read all three through
VfsRoot.

ClasspathElementZip held the jarfile twice, once as a VfsRoot and once as
a LogicalZipFile, and used the two interchangeably to answer the same
questions. Drop the LogicalZipFile field and ask the VfsRoot instead;
ArchiveRoot answers getPath() and getFile() by delegating to exactly the
LogicalZipFile methods that were being called here.

VfsRoot.getLogicalZipFile() stays, as the one seam between the virtual
filesystem and the modules built on it: expanding a manifest Class-Path
entry needs the unfiltered entry list and the arithmetic on the chain of
nested zipfile slices, which is not something the virtual filesystem has
an opinion about. Its return type lives in a package that is only
exported to those modules, so nothing outside them can name it.